[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Tariq Zeyad Sharaia <tariq.z.sharaia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b1"
flake8 = "^4.0.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.11b1", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
